--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
          <li> Vagrant </li>
          <li> Docker </li>
          <li> Ansible </li>
-         <li> Integración continua </li>
+         <li> Integración continua, error </li>
          <li> Línea agregada</li>
      </ul>
 </body>
