Mayuscula en titulo de cursos

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
      <meta charset = "UTF-8">
-     <title> Listado de cursos de Alura  en git</title>
+     <title> Listado de Cursos de Alura  en git</title>
 </head>
 <body>
      <ul>
